2001-07-26  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (command): set update_styles for more commands
	(update_styles): fixed indentation change signal emiting
	(key_press_event): don't check cursor position for update, it's
	obsolete

2001-07-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_set_spacing): added
	relative parameter
	(html_engine_table_set_padding): ditto
	(table_set_padding): check for t != NULL
	(table_set_spacing): ditto

	* keybindingsrc.ms: added bindings for table spacing/padding, I
	must change spell checking bindings to avoid conflicts :-(

	* gtkhtml-enums.h: added new command for table spacing/padding
	change

2001-07-25  Jon Trowbridge  <trow@ximian.com>

	* htmlsearch.c (html_search_set_forward): Check that
	search != NULL. (Bug #4869)

2001-07-24  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_get_table): don't fail,
	just return NULL

	* htmlengine-edit-tablecell.c (html_engine_get_table_cell): don't
	fail, just return NULL

	* htmlengine-edit-cut-and-paste.c (append_object): remove unwanted
	empty flows, fix cursor position

	* htmlengine-edit.c (html_engine_next_cell): fixed for multi flow
	cells
	(html_engine_prev_cell): likewise

	* htmlengine-edit-tablecell.c
	(html_engine_delete_table_cell_contents): new method

	* htmlengine-edit-table.c (html_engine_delete_table): new method

2001-07-23  Jon Trowbridge  <trow@ximian.com>

	* htmlengine-search.c (html_engine_search_set_forward): Added.
	Allows you to change the direction of an on-going search.

	* gtkhtml-search.c (gtk_html_engine_search_set_forward): Added.
	Allows you to change the direction of an on-going search.

2001-07-23  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-clueflowstyle.c: remove undo field as it's not
	needed
	(undo_or_redo): use dir parameter
	(style_operation_new): remove undo parameter

	* htmlengine-edit-table.c (html_engine_table_goto_0_0): fixed loop
	condition