@@ -190,6 +190,11 @@ typedef enum {
 	GTK_HTML_COMMAND_TABLE_PADDING_INC,
 	GTK_HTML_COMMAND_TABLE_PADDING_DEC,
 	GTK_HTML_COMMAND_TABLE_PADDING_ZERO,
+
+	GTK_HTML_COMMAND_DELETE_TABLE,
+	GTK_HTML_COMMAND_DELETE_TABLE_ROW,
+	GTK_HTML_COMMAND_DELETE_TABLE_COLUMN,
+	GTK_HTML_COMMAND_DELETE_TABLE_CELL_CONTENTS,
 } GtkHTMLCommandType;
 
 typedef enum {
